--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="title_home">Home</string>
     <string name="title_shop">Shop</string>
     <string name="start_game_button">Start Game</string>
+    <string name="arrow_left">❮</string>
+    <string name="arrow_right">❯</string>
 </resources>
